# sonarr-announced

./: .gitignore  Dockerfile  Makefile  notes.ipynb  pyproject.toml  test.py
arrnounced/: __init__.py  backend.py  irc.py  main.py  manager.py  message_handler.py  rabbit.py
config/: logging.conf
config/docker/compose/: docker-compose.local.yaml
sonarrAnnounced/: deluge.py  deluge_method_list.txt  irc.py  sonarr.py
sonarrAnnounced/scrapers/: tl.py
sonarrAnnounced/trackers/: __init__.py  tl.py
sonarrAnnounced/trackers/bak/: btn.py
src/arrnounced/: __init__.py  backend.py  irc.py  main.py  message_handler.py  rabbit.py  session_provider.py  utils.py
src/config/: logging.conf
src/config/docker/compose/: docker-compose.local.yaml
src/config/docker/scripts/: local-entrypoint.sh
src/sonarr_announced/: config.py  deluge.py  irc.py  sonarr.py
src/sonarr_announced/scrapers/: tl.py
src/sonarr_announced/trackers/: __init__.py  tl.py
src/tests/: test_deluge.py  test_sonarr.py  test_tl.py  test_tl_scraper.py
tests/: conftest.py  test.py  test_announce_parser.py  test_announcement.py  test_deluge.py  test_rabbit_queue.py  test_sonarr.py  test_tl.py  test_tl_announcement.py  test_tl_scraper.py
tests/configs/: missing_server.toml
