[tool.pytest.ini_options]
pythonpath = [
    "./src"
]
[tool.poetry]
name = "sonarr-announced"
version = "0.1.0"
description = "Fork of I3uddz/sonarrAnnounced for personal usage"
authors = ["Gravity Black <gravityblack@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^0.12"
Flask-HTTPAuth = "^3.2.1"
pluginbase = "^0.5"
pony = "^0.7.1"
pydle = "^1.0.0"
pure-sasl = "*"
"profig" = "*"
requests = "^2.12.4"
tornado = "^4.5.3"
Unidecode = "^0.04.20"
pythreadworker = "^0.6.0"
pyarr = "*"
aiopyarr = "*"
deluge-client = "*"
stringcase = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "*"
selenium = "^4.5.0"
nest_asyncio = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
